--- a/app/src/main/res/layout/fragment_adsurdos.xml
+++ b/app/src/main/res/layout/fragment_adsurdos.xml
@@ -23,8 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="134dp"
-            android:layout_marginStart="72dp"
+            android:layout_marginBottom="106dp"
+            android:layout_marginStart="67dp"
             android:text="BIEN" />
 
         <Button
@@ -35,6 +35,17 @@
             android:layout_alignTop="@+id/btn_resp1"
             android:layout_marginEnd="61dp"
             android:text="MAL" />
+
+        <TextView
+            android:id="@+id/textViewPregunta"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="190dp"
+            android:text="Aqui va una pregunta?" />
 
 
     </RelativeLayout>
