--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="red">#ff0011</color>
     <color name="green">#5af93e</color>
+    <color name="gray">#c4c4c4</color>
 
 </resources>
