--- a/app/src/main/res/layout/fragment_infor.xml
+++ b/app/src/main/res/layout/fragment_infor.xml
@@ -1,40 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.InforFragment">
+    tools:context=".Fragments.categorisFragment.CatergorisFragment">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listStadistics"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="581dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="251dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:gravity="center"
-            android:text="Estadisticos"
-            android:textSize="36dp"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:id="@+id/textViewSql"
-            android:layout_width="323dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="39dp"
-            android:layout_marginTop="38dp"
-            android:text="TextView"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="39dp" />
-
-    </RelativeLayout>
-
-
-
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
