--- a/app/src/main/res/layout/item_instructions.xml
+++ b/app/src/main/res/layout/item_instructions.xml
@@ -21,13 +21,13 @@
         >
 
         <ImageView
-            android:id="@+id/iv_image"
+            android:id="@+id/iv_ins_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             app:srcCompat="@drawable/blackboard" />
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_ins_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -37,13 +37,43 @@
 
 
     </android.support.v7.widget.CardView>
-
-
-
-
-
-
-
-
-
 </LinearLayout>
+<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+    <!--android:id="@+id/card_view"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:layout_margin="16dp"-->
+    <!--android:clickable="true"-->
+    <!--android:focusable="true"-->
+    <!--android:foreground="?android:attr/selectableItemBackground"-->
+    <!--card_view:cardCornerRadius="4dp">-->
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_image"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="0.40" />-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="0.60"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/tv_name"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_weight="0.5"-->
+                <!--android:gravity="center" />-->
+        <!--</LinearLayout>-->
+    <!--</LinearLayout>-->
+
+<!--&lt;!&ndash;</android.support.v7.widget.CardView>&ndash;&gt;-->
