--- a/app/src/main/res/layout/item_stadistics.xml
+++ b/app/src/main/res/layout/item_stadistics.xml
@@ -1,62 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_stadistics"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="16dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardCornerRadius="4dp"
-    app:ignore="NamespaceTypo">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/tv_name_stadistics"
+        android:layout_width="0dp"
+        android:layout_height="107dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="teito"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_buenas_stadistics" />
+
+    <TextView
+        android:id="@+id/tv_buenas_stadistics"
+        android:layout_width="0dp"
+        android:layout_height="62dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="teito"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+         />
+
+</android.support.constraint.ConstraintLayout>
+<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:app="http://schemas.android.com/tools"-->
+    <!--android:id="@+id/card_view"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:layout_margin="16dp"-->
+    <!--android:clickable="true"-->
+    <!--android:focusable="true"-->
+    <!--android:foreground="?android:attr/selectableItemBackground"-->
+    <!--card_view:cardCornerRadius="4dp"-->
+    <!--app:ignore="NamespaceTypo">-->
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="horizontal">-->
 
 
-        <ImageView
-            android:id="@+id/imageViewBackground"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/stadistics"
-            android:layout_weight="0.40" />
+        <!--<ImageView-->
+            <!--android:id="@+id/imageViewBackground"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--app:srcCompat="@drawable/stadistics"-->
+            <!--android:layout_weight="0.40" />-->
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.60"
-            android:orientation="vertical">
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="0.60"-->
+            <!--android:orientation="vertical">-->
 
 
-            <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.3"
-                android:gravity="center" />
+            <!--<TextView-->
+                <!--android:id="@+id/textViewName"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_weight="0.3"-->
+                <!--android:gravity="center" />-->
 
-            <TextView
-                android:id="@+id/textViewBuenas"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.3"
-                android:gravity="center" />
-            <TextView
-                android:id="@+id/textViewMalas"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.3"
-                android:gravity="center" />
+            <!--<TextView-->
+                <!--android:id="@+id/textViewBuenas"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_weight="0.3"-->
+                <!--android:gravity="center" />-->
+            <!--<TextView-->
+                <!--android:id="@+id/textViewMalas"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_weight="0.3"-->
+                <!--android:gravity="center" />-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
-</android.support.v7.widget.CardView>
+<!--</android.support.v7.widget.CardView>-->
