--- a/app/src/main/res/layout/item_stadistics.xml
+++ b/app/src/main/res/layout/item_stadistics.xml
@@ -1,47 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.constraint.ConstraintLayout-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:id="@+id/item_stadistics"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="5dp"-->
-    <!--android:background="@color/colorPrimaryDark"-->
-    <!--android:layout_marginBottom="10dp">-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/tv_name_stadistics"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="107dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:gravity="center"-->
-        <!--android:text="teito"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.0"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/tv_buenas_stadistics" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/tv_buenas_stadistics"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="62dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:gravity="center"-->
-        <!--android:text="teito"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="1.0"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--tools:layout_editor_absoluteY="0dp" />-->
-
-<!--</android.support.constraint.ConstraintLayout>-->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/tools"
@@ -75,8 +32,18 @@
             android:orientation="vertical">
 
 
+            <!--<TextView-->
+                <!--android:id="@+id/textViewGameName"-->
+                <!--android:hint="Juego: "-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_weight="0.3"-->
+                <!--android:gravity="center" />-->
+
             <TextView
                 android:id="@+id/textViewName"
+                android:hint="Jugador: "
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
@@ -85,6 +52,7 @@
 
             <TextView
                 android:id="@+id/textViewBuenas"
+                android:hint="Correctos: "
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
@@ -92,6 +60,7 @@
                 android:gravity="center" />
             <TextView
                 android:id="@+id/textViewMalas"
+                android:hint="Incorrectos: "
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
