--- a/app/src/main/res/layout/fragment_reconoce1.xml
+++ b/app/src/main/res/layout/fragment_reconoce1.xml
@@ -52,6 +52,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:bottomRightRadius="10dp"
+        android:bottomLeftRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:background="@drawable/btn_bg_games"
         android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,6 +153,9 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:background="@drawable/btn_bg_games"
         android:text="Nuevo juego"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -158,6 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@drawable/btn_bg_games"
         android:text="Regresar"
         app:layout_constraintBottom_toBottomOf="@+id/btn_newGame"
         app:layout_constraintEnd_toStartOf="@+id/btn_newGame"
